# dbt-proton

./: README.md  dev_requirements.txt  pyproject.toml  pytest.ini  setup.py
dbt/adapters/proton/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt/include/proton/: dbt_project.yml  profile_template.yml  sample_profiles.yml
dbt/include/proton/macros/: adapters.sql  catalog.sql
dbt/include/proton/macros/generic_test_sql/: accepted_values.sql  not_null.sql  relationships.sql  unique.sql
dbt/include/proton/macros/materializations/: incremental.sql  seed.sql  snapshot.sql  test.sql
dbt/include/proton/macros/schema_tests/: relationships.sql
tests/: conftest.py
tests/functional/: fixtures.py  test_proton.py
tests/integration/: proton.dbtspec
tests/unit/: test_adapter.py
