[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-proton"
version = "1.6.5"
description = "Proton dbt adapter"
authors = [{name="Jove Zhong", email="jove@timeplus.io"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
dependencies = [
  "dbt-core>=1.6.5",
  "proton-driver>=0.2.8",
]

[project.urls]
"Homepage" = "https://github.com/timeplus-io/proton"
"Bug Tracker" = "https://github.com/timeplus-io/proton"